Prevent columns from shrinking when the window shrinks.
For example, when the scrollbar appears and confusingly pushes messages
out of the container 😒

--- a/thing.css
+++ b/thing.css
@@ -12,10 +12,11 @@ html {
 }
 
 .chat-page {
-  width: 400px;
+  width: 300px;
   margin: 10px;
   border-radius: 3px;
   border: 2px solid #747;
+  flex-shrink: 0;
 }
 
 .chat-message {
